[package]
name = "ldbcollector"
version = "0.1.0"
authors = ["Maximilian Huber <gh@maxhbr.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ldbcollector"
path = "src/lib.rs"

[[bin]]
name = "ldbcollector"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
iri-string = "0.7.0"
chrono = "0.4.0"
petgraph = "0.6.0"
spdx = "0.10.0"
either = "1.8.1"
multimap = "0.8.3"
libc = "0.2.139"
itertools = "0.10.5"
log = "0.4.17"
env_logger = "0.9.3" # 0.10.0 fails in nix build :(

# wasm:
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
