[package]
name = "ldbcollector"
version = "0.1.0"
authors = ["Maximilian Huber <gh@maxhbr.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ldbcollector"
path = "src/lib.rs"

[[bin]]
name = "ldbcollector"
path = "src/main.rs"

[features]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
default = ["console_error_panic_hook"]

[dependencies]
build_html = "2.2.0"
chrono = "0.4.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
either = "1.8.1"
glob = "0.3.1"
graphviz-rust = "0.6.1"
iri-string = "0.7.0"
itertools = "0.10.5"
libc = "0.2.139"
log = "0.4.17"
multimap = "0.8.3"
petgraph = "0.6.3"
pretty_env_logger = "0.4.0"
regex = "1.7.1"
rust-embed="6.4.2"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.9.17"
spdx = "0.10.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
tsv = "0.1.1"
warp = "0.3.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
