# SPDX-FileCopyrightText: 2021 Hermine-team <hermine@inno3.fr>
# SPDX-FileCopyrightText: 2022 Martin Delabre <gitlab.com/delabre.martin>
#
# SPDX-License-Identifier: AGPL-3.0-only

[tool.poetry]
name = "hermine-project"
version = "0.1.0"
description = ""
authors = ["Camille Moulin <cmoulin@inno3.fr>", "Martin Delabre <martin.delabre@inno3.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
django-extensions = "^3.1.1"
djangorestframework = "^3.12.4"
drf-nested-routers = "^0.93.3"
psycopg2-binary = "^2.9.2"
python-dateutil = "^2.8.2"
spdx-license-list = "^0.5.2"
odfpy = "^1.4.1"
Django = "^4.0.4"
spdx-tools = "0.7.0a3"
social-auth-app-django = "^5.0.0"
django-filter = "^21.1"
drf-yasg = "^1.20.0"
packageurl-python = "^0.9.9"

[tool.poetry.dev-dependencies]
Sphinx = "^4.2.0"
myst-parser = "^0.17.0"
mdit-py-plugins = "^0.3.0"
sphinx-rtd-theme = "^1.0.0"
pip-audit = "^1.1.1"
coverage = "^6.2"
graphviz = "^0.19.1"
pydot = "^1.4.2"
dco-check = "^0.3.0"
reuse = "^0.14.0"
black = {version = "^22.1.0", allow-prereleases = true}
flake8-black = "^0.2.4"

[tool.black]
exclude = "hermine/cube/migrations"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
