[tool.poetry]
name = "licenselynx"
version = "0.7.8"
description = "Unified License database and License Mapper"
authors = ["Leo Reinmann <leo.reinmann@siemens.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "licenselynx" }]
include = [{ path = "licenselynx/resources/merged_data.json" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
pytest = "^8.0.2"
coverage = "^7.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
