#
# SPDX-FileCopyrightText: Copyright 2025 Siemens AG
# SPDX-License-Identifier: BSD-3-Clause
#
[project]
name = "licenselynx"
version = "2.0.1"
description = "Unified License Mapper"
authors = [
    { name = "Leo Reinmann", email = "leo.reinmann@siemens.com" }
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"



[tool.poetry]
package-mode = true
packages = [
    { include = "licenselynx" }
]
include = [
    { path = "licenselynx/resources/merged_data.json", format = ["sdist", "wheel"] }
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
pytest = "^8.0.2"
coverage = "^7.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
