[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Leo Reinmann <leo.reinmann@siemens.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "code-docs-theme"
url = "https://code.siemens.com/api/v4/projects/64538/packages/pypi/simple"
priority = "supplemental"


[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-code-siemens-code-docs-theme = {version = "^7.1.0", extras = ["licenses"], source = "code-docs-theme"}
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-awesome-pages-plugin = "^2.9.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
